--- a/project-1.ipynb
+++ b/project-1.ipynb
@@ -29,10 +29,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "5c91b407-9b52-4801-bcd4-49072738578e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Student Name': 'Adrian Ellison',\n",
+       "  'Week 1': '77',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '4',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '175'},\n",
+       " {'Student Name': 'Ophelia Mcphee',\n",
+       "  'Week 1': '179',\n",
+       "  'Week 2': '151',\n",
+       "  'Week 3': '164',\n",
+       "  'Week 4': '173',\n",
+       "  'Week 5': '171'},\n",
+       " {'Student Name': 'Yasir Fenton',\n",
+       "  'Week 1': '180',\n",
+       "  'Week 2': '47',\n",
+       "  'Week 3': '164',\n",
+       "  'Week 4': '168',\n",
+       "  'Week 5': '169'},\n",
+       " {'Student Name': 'Benny Arias',\n",
+       "  'Week 1': '180',\n",
+       "  'Week 2': '152',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '170'},\n",
+       " {'Student Name': 'Tamara Cottrell',\n",
+       "  'Week 1': '183',\n",
+       "  'Week 2': '79',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '173',\n",
+       "  'Week 5': '168'},\n",
+       " {'Student Name': 'Jada Calhoun',\n",
+       "  'Week 1': '178',\n",
+       "  'Week 2': '147',\n",
+       "  'Week 3': '162',\n",
+       "  'Week 4': '171',\n",
+       "  'Week 5': '175'},\n",
+       " {'Student Name': 'Marlene Parry',\n",
+       "  'Week 1': '174',\n",
+       "  'Week 2': '150',\n",
+       "  'Week 3': '159',\n",
+       "  'Week 4': '171',\n",
+       "  'Week 5': '170'},\n",
+       " {'Student Name': 'Jazmin Foreman',\n",
+       "  'Week 1': '181',\n",
+       "  'Week 2': '103',\n",
+       "  'Week 3': '157',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '35'},\n",
+       " {'Student Name': 'Bear Zuniga',\n",
+       "  'Week 1': '180',\n",
+       "  'Week 2': '131',\n",
+       "  'Week 3': '160',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '182'},\n",
+       " {'Student Name': 'Sanjay Edwards',\n",
+       "  'Week 1': '173',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '171',\n",
+       "  'Week 5': '66'},\n",
+       " {'Student Name': 'Vicki Person',\n",
+       "  'Week 1': '178',\n",
+       "  'Week 2': '156',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '173'},\n",
+       " {'Student Name': 'Teegan Fleming',\n",
+       "  'Week 1': '183',\n",
+       "  'Week 2': '153',\n",
+       "  'Week 3': '156',\n",
+       "  'Week 4': '167',\n",
+       "  'Week 5': '161'},\n",
+       " {'Student Name': 'Alfie-James Pierce',\n",
+       "  'Week 1': '180',\n",
+       "  'Week 2': '150',\n",
+       "  'Week 3': '155',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '74'},\n",
+       " {'Student Name': 'Waleed Wagstaff',\n",
+       "  'Week 1': '174',\n",
+       "  'Week 2': '153',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '168',\n",
+       "  'Week 5': '176'},\n",
+       " {'Student Name': 'Miles Lyons',\n",
+       "  'Week 1': '177',\n",
+       "  'Week 2': '2',\n",
+       "  'Week 3': '160',\n",
+       "  'Week 4': '173',\n",
+       "  'Week 5': '169'},\n",
+       " {'Student Name': 'Ayrton Justice',\n",
+       "  'Week 1': '178',\n",
+       "  'Week 2': '153',\n",
+       "  'Week 3': '160',\n",
+       "  'Week 4': '169',\n",
+       "  'Week 5': '175'},\n",
+       " {'Student Name': 'Adeline Jordan',\n",
+       "  'Week 1': '179',\n",
+       "  'Week 2': '152',\n",
+       "  'Week 3': '105',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '195'},\n",
+       " {'Student Name': 'Katelyn Beard',\n",
+       "  'Week 1': '179',\n",
+       "  'Week 2': '146',\n",
+       "  'Week 3': '164',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '171'},\n",
+       " {'Student Name': 'Lindsey Fuller',\n",
+       "  'Week 1': '177',\n",
+       "  'Week 2': '157',\n",
+       "  'Week 3': '159',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '174'},\n",
+       " {'Student Name': 'Annabell Hart',\n",
+       "  'Week 1': '177',\n",
+       "  'Week 2': '155',\n",
+       "  'Week 3': '162',\n",
+       "  'Week 4': '171',\n",
+       "  'Week 5': '174'},\n",
+       " {'Student Name': 'Tayla Sparrow',\n",
+       "  'Week 1': '51',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '166',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '174'},\n",
+       " {'Student Name': 'Kai Cabrera',\n",
+       "  'Week 1': '170',\n",
+       "  'Week 2': '151',\n",
+       "  'Week 3': '160',\n",
+       "  'Week 4': '173',\n",
+       "  'Week 5': '168'},\n",
+       " {'Student Name': 'Rosie Higgins',\n",
+       "  'Week 1': '175',\n",
+       "  'Week 2': '153',\n",
+       "  'Week 3': '157',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '170'},\n",
+       " {'Student Name': 'Dora Delacruz',\n",
+       "  'Week 1': '175',\n",
+       "  'Week 2': '147',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '316',\n",
+       "  'Week 5': '175'},\n",
+       " {'Student Name': 'Daniella Gould',\n",
+       "  'Week 1': '176',\n",
+       "  'Week 2': '153',\n",
+       "  'Week 3': '167',\n",
+       "  'Week 4': '173',\n",
+       "  'Week 5': '167'},\n",
+       " {'Student Name': 'Shaquille Wood',\n",
+       "  'Week 1': '175',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '165',\n",
+       "  'Week 4': '184',\n",
+       "  'Week 5': '170'},\n",
+       " {'Student Name': 'Aditi Abbott',\n",
+       "  'Week 1': '175',\n",
+       "  'Week 2': '148',\n",
+       "  'Week 3': '168',\n",
+       "  'Week 4': '168',\n",
+       "  'Week 5': '171'},\n",
+       " {'Student Name': 'Gabija Whitney',\n",
+       "  'Week 1': '175',\n",
+       "  'Week 2': '153',\n",
+       "  'Week 3': '165',\n",
+       "  'Week 4': '172',\n",
+       "  'Week 5': '178'},\n",
+       " {'Student Name': 'Fynn Robin',\n",
+       "  'Week 1': '170',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '163',\n",
+       "  'Week 4': '173',\n",
+       "  'Week 5': '175'},\n",
+       " {'Student Name': 'Jaye Sweeney',\n",
+       "  'Week 1': '174',\n",
+       "  'Week 2': '156',\n",
+       "  'Week 3': '121',\n",
+       "  'Week 4': '169',\n",
+       "  'Week 5': '168'},\n",
+       " {'Student Name': 'Saffa Brook',\n",
+       "  'Week 1': '175',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '164',\n",
+       "  'Week 4': '171',\n",
+       "  'Week 5': '143'},\n",
+       " {'Student Name': 'Kameron Anthony',\n",
+       "  'Week 1': '174',\n",
+       "  'Week 2': '157',\n",
+       "  'Week 3': '149',\n",
+       "  'Week 4': '169',\n",
+       "  'Week 5': '169'},\n",
+       " {'Student Name': 'Owain Emerson',\n",
+       "  'Week 1': '9',\n",
+       "  'Week 2': '290',\n",
+       "  'Week 3': '163',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '164'},\n",
+       " {'Student Name': \"Tim O'Connor\",\n",
+       "  'Week 1': '170',\n",
+       "  'Week 2': '155',\n",
+       "  'Week 3': '157',\n",
+       "  'Week 4': '171',\n",
+       "  'Week 5': '174'},\n",
+       " {'Student Name': 'Alaya Dickinson',\n",
+       "  'Week 1': '24',\n",
+       "  'Week 2': '154',\n",
+       "  'Week 3': '161',\n",
+       "  'Week 4': '170',\n",
+       "  'Week 5': '174'}]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -40,7 +260,9 @@
     "with open('participants.csv', newline='') as csvfile:\n",
     "    reader = csv.DictReader(csvfile)\n",
     "    for row in reader:\n",
-    "        participants.append(row)\n"
+    "        participants.append(row)\n",
+    "        \n",
+    "participants"
    ]
   },
   {
@@ -57,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "6a0335fa-bf5e-4f48-a38b-df956bcc1876",
    "metadata": {},
    "outputs": [
@@ -67,7 +289,7 @@
        "(161, 175)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "eea136d8-77f1-4056-a458-0c99404fe808",
    "metadata": {},
    "outputs": [
@@ -105,7 +327,7 @@
        "[174.0, 175.0, 179.0]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,17 +344,17 @@
    "metadata": {},
    "source": [
     "## Experiment 4\n",
-    "__4. Using Turkey's fences method, find the outlers in the data set, where k = 1.5 will indicate an \"outlier\"__\n",
+    "__4. Using Tukey's fences method, find the outlers in the data set, where k = 1.5 will indicate an \"outlier\"__\n",
     "$$ [Q1 - k(Q3 - Q1), Q3 + k(Q3 - Q1)] $$\n",
     "\n",
-    "* The 'Turkey fences' method observes outliers based on measuring the IQR (interquartile range) of the observed data, same method for boxplots. Q1 is the lower quartile and Q3 is the upper bound, and we set k = 1.5 as John Turkey suggested that would indicate \"outliers\". \n",
+    "* The 'Tukey fences' method observes outliers based on measuring the IQR (interquartile range) of the observed data, same method for boxplots. Q1 is the lower quartile and Q3 is the upper bound, and we set k = 1.5 as John Tukey suggested that would indicate \"outliers\". \n",
     "* Using this method we assign the lower and upper quartile values from Experiment 3's results, and then apply the formula listed to get the upper and lower outlier bounds.\n",
     "* To get the outliers we loop through the array of week 1 values and pick out any that were outside the range. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "758632be-8fb6-4b28-952b-a128a4cf513c",
    "metadata": {},
    "outputs": [
@@ -142,7 +364,7 @@
        "[77, 51, 9, 24]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,9 +375,9 @@
     "q2 = quartiles[1]\n",
     "q3 = quartiles[2]\n",
     "\n",
-    "turkey_fence = [(q1 - k*(q3 - q1)), (q3 + k*(q3 - q1))]\n",
+    "tukey_fence = [(q1 - k*(q3 - q1)), (q3 + k*(q3 - q1))]\n",
     "\n",
-    "outliers = [i for i in wk1 if (i < turkey_fence[0] or i > turkey_fence[1])]\n",
+    "outliers = [i for i in wk1 if (i < tukey_fence[0] or i > tukey_fence[1])]\n",
     "\n",
     "outliers"
    ]
@@ -167,7 +389,7 @@
    "source": [
     "## Experiment 5\n",
     "\n",
-    "__5. Compute the standard deviation for Week 1 dataset to find outliers using the 68-95-99.7 rule, then compare with outlier results found with Turkey Method in Experiment 4.__ \n",
+    "__5. Compute the standard deviation for Week 1 dataset to find outliers using the 68-95-99.7 rule, then compare with outlier results found with Tukey Method in Experiment 4.__ \n",
     "\n",
     "$$ Pr(\\mu - 3\\sigma \\leq X \\leq \\mu + 3\\sigma) $$\n",
     "\n",
@@ -177,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "632ece8c-996e-4a3e-98b8-340c2957f028",
    "metadata": {},
    "outputs": [
@@ -187,7 +409,7 @@
        "[9, 24]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +427,7 @@
    "metadata": {},
    "source": [
     "#### Results:\n",
-    "The outliers with the Turkey Fence IQR method were different from the ones received with the 99.7% rule. When following empirical rule of normally distributed dataset where there is 99.7% probability that the values lie within 3 standard deviations from the mean, then we only receive two outliers of [9, 24]. With the Turkey Fence method there were 4 outliers of [77, 51, 9, 24]. If we had instead used the 68% rule of only one standard deviation, then we would have the same result. "
+    "The outliers with the Tukey Fence IQR method were different from the ones received with the 99.7% rule. When following empirical rule of normally distributed dataset where there is 99.7% probability that the values lie within 3 standard deviations from the mean, then we only receive two outliers of [9, 24]. With the Tukey Fence method there were 4 outliers of [77, 51, 9, 24]. If we had instead used the 68% rule of only one standard deviation, then we would have the same result. "
    ]
   },
   {
@@ -215,14 +437,14 @@
    "source": [
     "## Experiment 6\n",
     "\n",
-    "__6. Create a function tardy_iqr() to return a list of the names for the outliers found with Turkey Fence method.__\n",
+    "__6. Create a function tardy_iqr() to return a list of the names for the outliers found with Tukey Fence method.__\n",
     "\n",
-    "Function accepts a parameter of 'col_name' which accepts a string of one of the columns in participants.csv and will then calculate the outliers with the Turkey Fence method and return a list of the names of the students with the matching outlier values. "
+    "Function accepts a parameter of 'col_name' which accepts a string of one of the columns in participants.csv and will then calculate the outliers with the Tukey Fence method and return a list of the names of the students with the matching outlier values. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "632b52a6-6b61-4177-936b-88963e2f4bfb",
    "metadata": {},
    "outputs": [
@@ -232,25 +454,27 @@
        "\"Week 1: ['Adrian Ellison', 'Tayla Sparrow', 'Owain Emerson', 'Alaya Dickinson']\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def tardy_iqr(col_name):\n",
+    "    # get all attendance values from a specified week\n",
     "    d = [int(m[col_name]) for m in participants]\n",
     "    d_mean = statistics.mean(d)\n",
     "    d_median = statistics.median(d)\n",
     "    \n",
+    "    # determine quartiles and find outliers\n",
     "    quartiles = [q for q in statistics.quantiles(d, n = 4)]\n",
     "    q1 = quartiles[0]\n",
     "    q2 = quartiles[1]\n",
     "    q3 = quartiles[2]\n",
+    "    tukey_fence = [(q1 - k*(q3 - q1)), (q3 + k*(q3 - q1))]\n",
     "    \n",
-    "    turkey_fence = [(q1 - k*(q3 - q1)), (q3 + k*(q3 - q1))]\n",
-    "\n",
-    "    return [student['Student Name'] for student in participants if (int(student[col_name]) < turkey_fence[0] or int(student[col_name]) > turkey_fence[1])]\n",
+    "    # output the students that are outliers\n",
+    "    return [student['Student Name'] for student in participants if (int(student[col_name]) < tukey_fence[0] or int(student[col_name]) > tukey_fence[1])]\n",
     "\n",
     "f'Week 1: {tardy_iqr(\"Week 1\")}'"
    ]
@@ -269,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "a604eb2b-d5a6-467a-9179-db8e16cf675f",
    "metadata": {},
    "outputs": [
@@ -279,7 +503,7 @@
        "\"Week 1: ['Owain Emerson', 'Alaya Dickinson']\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,9 +531,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "e81f3c3d-8be4-4688-aab3-bf044503c533",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -356,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -370,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
